--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
             <div class="w-full px4 flex flex-wrap justify-center xl:w-10/12 xl:mx-auto">
                 <div class="mb-12 p-4 md:w-1/2">
                     <div class="rounded-md shadow-md overflow-hidden">
-                        <img src="/dist/img/portofolio/1.png" alt="Landing Page" width="w-full">
+                        <img src="dist/img/portofolio/1.png" alt="Landing Page" width="w-full">
                     </div>
                     <h3 class="font-semibold text-xl text-dark mt-5 mb-3 ">Landing Page
                     </h3>
@@ -138,7 +138,7 @@
                 </div>
                 <div class="mb-12 p-4 md:w-1/2">
                     <div class="rounded-md shadow-md overflow-hidden">
-                        <img src="/dist/img/portofolio/2.jpg" alt="E-commerce" width="w-full">
+                        <img src="dist/img/portofolio/2.jpg" alt="E-commerce" width="w-full">
                     </div>
                     <h3 class="font-semibold text-xl text-dark mt-5 mb-3 ">E-commerce
                     </h3>
@@ -146,7 +146,7 @@
                 </div>
                 <div class="mb-12 p-4 md:w-1/2">
                     <div class="rounded-md shadow-md overflow-hidden">
-                        <img src="/dist/img/portofolio/3.webp" alt="Techincal Documentation" width="w-full">
+                        <img src="dist/img/portofolio/3.webp" alt="Techincal Documentation" width="w-full">
                     </div>
                     <h3 class="font-semibold text-xl text-dark mt-5 mb-3 ">Techincal Documentation
                     </h3>
@@ -154,7 +154,7 @@
                 </div>
                 <div class="mb-12 p-4 md:w-1/2">
                     <div class="rounded-md shadow-md overflow-hidden">
-                        <img src="/dist/img/portofolio/4.jpg" alt="Tribut Page" width="w-full">
+                        <img src="dist/img/portofolio/4.jpg" alt="Tribut Page" width="w-full">
                     </div>
                     <h3 class="font-semibold text-xl text-dark mt-5 mb-3 ">Tribut Page  
                     </h3>
@@ -179,16 +179,16 @@
             <div class="w-full px-4">
                 <div class="flex flex-wrap items-center justify-center">
                     <a href="#" class="max-w-[120px] mx-4 py-4 grayscale opacity-60 transition hover:grayscale-0 hover:opacity-100 duration-500 lg:mx-6 xl:mx-8">
-                        <img src="/dist/img/clients/Google.svg" alt="Google" />
+                        <img src="dist/img/clients/Google.svg" alt="Google" />
                     </a>
                     <a href="#" class="max-w-[120px] mx-4 py-4 grayscale opacity-60 transition hover:grayscale-0 hover:opacity-100 duration-500 lg:mx-6 xl:mx-8">
-                        <img src="/dist/img/clients/Shopee.svg" alt="Shopee" />
+                        <img src="dist/img/clients/Shopee.svg" alt="Shopee" />
                     </a>
                     <a href="#" class="max-w-[120px] mx-4 py-4 grayscale opacity-60 transition hover:grayscale-0 hover:opacity-100 duration-500 lg:mx-6 xl:mx-8">
-                        <img src="/dist/img/clients/Tokopedia.svg" alt="Tokopedia" />
+                        <img src="dist/img/clients/Tokopedia.svg" alt="Tokopedia" />
                     </a>
                     <a href="#" class="max-w-[120px] mx-4 py-4 grayscale opacity-60 transition hover:grayscale-0 hover:opacity-100 duration-500 lg:mx-6 xl:mx-8">
-                        <img src="/dist/img/clients/Bing.svg" alt="Bing" />
+                        <img src="dist/img/clients/Bing.svg" alt="Bing" />
                     </a>
                 </div>
             </div>
@@ -286,7 +286,6 @@
     <!-- Contact Section End -->
 
     <!-- Footer Section Start -->
-
     <footer class="bg-dark pt-24 pb-12">
         <div class="container">
             <div class="flex flex-wrap">
@@ -298,39 +297,39 @@
                     <p>Palu</p>
                 </div>
                 <div class="w-full px-4 mb-12 md:w-1/3">
-                    <h3 class="font-semibold text-white text-xl">Kategori Tulisan</h3>
+                    <h3 class="font-semibold text-white text-xl mb-5">Kategori Tulisan</h3>
                     <ul class="text-slate-300">
                         <li>
-                            <a href="#" class="inline-block text-base hover:text-primary">Programming</a>
+                            <a href="#" class="inline-block text-base hover:text-primary mb-2">Programming</a>
                         </li>
                         <li>
-                            <a href="#" class="inline-block text-base hover:text-primary">Teknologi</a>
+                            <a href="#" class="inline-block text-base hover:text-primary mb-2">Teknologi</a>
                         </li>
                          <li>
-                            <a href="#" class="inline-block text-base hover:text-primary">Gaya Hidup</a>
+                            <a href="#" class="inline-block text-base hover:text-primary mb-2">Gaya Hidup</a>
                         </li>
                     </ul>
                 </div>
                 <div class="w-full px-4 mb-12 md:w-1/3">
-                    <h3 class="font-semibold text-white text-xl">Tautan</h3>
+                    <h3 class="font-semibold text-white text-xl mb-5">Tautan</h3>
                     <ul class="text-slate-300">
                         <li>
-                            <a href="#beranda" class="inline-block text-base hover:text-primary">Beranda</a>
+                            <a href="#beranda" class="inline-block text-base hover:text-primary mb-2">Beranda</a>
                         </li>
                         <li>
-                            <a href="#about" class="inline-block text-base hover:text-primary">Tentang Saya</a>
+                            <a href="#about" class="inline-block text-base hover:text-primary mb-2">Tentang Saya</a>
                         </li>
                         <li>
-                            <a href="#portofolio" class="inline-block text-base hover:text-primary">Portofolio</a>
+                            <a href="#portofolio" class="inline-block text-base hover:text-primary mb-2">Portofolio</a>
                         </li>
                         <li>
-                            <a href="#clients" class="inline-block text-base hover:text-primary">Clients</a>
+                            <a href="#clients" class="inline-block text-base hover:text-primary mb-2">Clients</a>
                         </li>
                         <li>
-                            <a href="#blog" class="inline-block text-base hover:text-primary">Blog</a>
+                            <a href="#blog" class="inline-block text-base hover:text-primary mb-2">Blog</a>
                         </li>
                         <li>
-                            <a href="#contact" class="inline-block text-base hover:text-primary">Contact</a>
+                            <a href="#contact" class="inline-block text-base hover:text-primary mb-2">Contact</a>
                         </li>
                     </ul>
                 </div>
